docs(readme): rewrite to shipped 0.1.6 reality — correct Maven Central coords, npx-first quickstart, 5 platforms
- Fix the published coordinates: tools.deemwar -> io.github.deemwario (Maven Central
  group), and 0.1.0-SNAPSHOT -> 0.1.6 throughout.
- Drop the false 'macOS Intel x86_64, CPU-only' / 'npm macOS x64 only' banners —
  ships mac Intel+ARM, Linux x64+ARM64, Windows x64 on Maven Central + npm.
- Lead with the positioning (in-process, no JNI, no daemon) + a 3-path quickstart
  (npx zero-install, Spring starter, plain Java) with copy-paste coords.
- Add the multi-turn CLI + sessions/--resume, an honest compare table, and links to
  the new docs (why / compare / quickstart).